--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -7,10 +7,27 @@
 <body>
     <h1>Miso Soup</h1>
     <img src="https://static.independent.co.uk/2023/02/13/11/nourish-21fac6e6-a957-11ed-b062-a22974b8c4f7.jpg?quality=75&width=1250&crop=3%3A2%2Csmart&auto=webp" alt="Miso Soup with Vegetables" height="310" width="420">
+    
     <h2>Description</h2>
     <p>My partner is Japanese. Throughout my time with her <em>(almost 6 years now!)</em> I have learnt a lot about Japanese cuisine. One of my favourite dishes that has now become my daily breaksfast is a simple dish that provides great nutrition and tastes delicious, <strong>Miso Soup.</strong></p>
-    <p>Now when you first hear the term, you probably think of a simple soup that you might order at a typical Japanese restautant that is mostly just liquid with a few chopped spting onions and maybe even small cubes of tofu. However, I have learnt that Miso Soup can include so much more.</p>
-    <p>This version contains lots of different vegetable: carrots, onions, daikon (white turnip), cabbage and potatoes.</p>
+    <p>Now when you first hear the term, you probably think of a simple soup that you might order at a typical Japanese restautant that is mostly just liquid with a few chopped spting onions and maybe even small cubes of tofu. However, I have learnt that Miso Soup can include <strong>so much more.</strong></p>
+    <p>This version contains lots of different vegetable: carrots, onions, daikon (white turnip), napa cabbage and potatoes. I hope that you enjoy it as much as we do!</p>
 
+    <h2>Ingredients</h2>
+    <h3>Makes 8 Servings</h3>
+    <ul>
+        <li>2 medium sized carrots, sliced</li>
+        <li>2 medium sized potatoes, sliced</li>
+        <li>Half of 1 napa cabbage, roughly chopped</li>
+        <li>2 medium brown onions, cut into wedges</li>
+        <li>4cm of daikon, peeled and cut into small triangles</li>
+        <li>10g of instant dashi powder</li>
+        <li>7 tbsp miso paste (red for a stronger flavour, white for a milder favour)</li>
+        <li>1.5 litres of boiling water</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
