Complete the Miso Soup recipe
Added Ingredients and Steps sections to file

--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -10,7 +10,7 @@
     
     <h2>Description</h2>
     <p>My partner is Japanese. Throughout my time with her <em>(almost 6 years now!)</em> I have learnt a lot about Japanese cuisine. One of my favourite dishes that has now become my daily breaksfast is a simple dish that provides great nutrition and tastes delicious, <strong>Miso Soup.</strong></p>
-    <p>Now when you first hear the term, you probably think of a simple soup that you might order at a typical Japanese restautant that is mostly just liquid with a few chopped spting onions and maybe even small cubes of tofu. However, I have learnt that Miso Soup can include <strong>so much more.</strong></p>
+    <p>Now when you first hear the term, you probably think of a simple soup that you might order at a typical Japanese restautant that is mostly just liquid with a few chopped spring onions and maybe even small cubes of tofu. However, I have learnt that Miso Soup can include <strong>so much more.</strong></p>
     <p>This version contains lots of different vegetable: carrots, onions, daikon (white turnip), napa cabbage and potatoes. I hope that you enjoy it as much as we do!</p>
 
     <h2>Ingredients</h2>
@@ -27,7 +27,23 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
+        <li>Clean and prepare all vegetables and add to a wok or large pan with a drizzle of oil on a medium-high heat.</li>
+        <li>Sweat down the vegetables until they are slightly wilted, around 5-10 minutes.
+            <ul>
+                <li><strong>Tip:</strong> You can use a lid if you have one to help speed up this process.</li>
+                </ul>
+        </li>
+        <li>Transfer the half cooked vegetables into a separate pot that can hold at least 2 litres of liquid.</li>
+        <li>Add the boiling water and instant dashi powder to the pot.</li>
+        <li>Set the heat to high, bring to a boil and mix to incorporate the dashi and allow it to dissolve.</li>
+        <li>Once boiling, reduce heat to low and simmer for around 10 minutes or until vegetables are cooked through.
+            <ul>
+                <li><strong>Tip:</strong> An easy way to check this is to take a knife and poke a carrot. If the knife goes through easily, it's ready!</li>
+            </ul>
+        </li>
+        <li>While the pot is simmering, add the miso paste to a heatproof bowl and take one ladleful of the pot liquid and add it to the bowl. Whisk until there are no lumps.</li>
+        <li>Once vegetables are cooked through, turn off the heat and then add the miso paste into the pot, mixing thoroughly to incoporate.</li>
+        <li>Serve into bowls and enjoy! We like to have this with a small bowl of rice and a half cooked egg. We also add some Cayenne Pepper to the soup to give it some kick!</li>
     </ol>
 </body>
 </html>
