Add Ingredients section to file
Included all Ingredients to allow users to follow

--- a/recipes/semla.html
+++ b/recipes/semla.html
@@ -9,12 +9,40 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2023%2F02%2F13%2F8540775-Semla-Swedish-Fat-Tuesday-Buns-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Semla Buns" height="310" width="420">
     
     <h2>Description</h2>
-    <p></p>
+    <p>I have always had a fascination with Sweden. Perhaps it is due to my deep interest in Vikings and their culture? Or it could be the fact that according to my MyHeritage.com DNA results I am apparently <strong>25.9%</strong> Scandinavian?</p>
+    <p>Regardless of this, what inspired me to first attempt to make these delicious buns was after watch my partner and I's favourite anime, One Piece, and seeing Big Mom's obesession with them</p>
+    <p>They are traditionally supposed to be eating during February before Lent and apparently a Swedish <em>actually died from eating too many of them in one sitting (apparently 12!)</em></p>
 
     <h2>Ingredients</h2>
     <h3>Makes 12 Buns</h3>
+    <h4>Dough</h4>
     <ul>
-        <li></li>
+        <li>1 cup warm milk (35 - 37 C)</li>
+        <li>1 package of instant dry yeast</li>
+        <li>3 1/3 cups high grade flour</li>
+        <li>7 tbsp unsalted butter, at room temperature</li>
+        <li>2/3 cup icing sugar</li>
+        <li>1 large egg</li>
+        <li>2 1/2 tsp groung cardamom</li>
+        <li>1 tsp salt</li>
+    </ul>
+    <h4>Egg Wash</h4>
+    <ul>
+        <li>1 large egg</li>
+        <li>1 tsp water</li>
+    </ul>
+    <h4>Almond Filling</h4>
+    <ul>
+        <li>400g almond paste</li>
+        <li>1/2 cup icing sugar</li>
+        <li>1/3 milk, or as needed to achieve desired texture</li>
+        <li>1 tsp ground cardamom, or to taste</li>
+    </ul>
+    <h4>For Serving</h4>
+    <ul>
+        <li>1 1/2 cups heavy cream, whipped</li>
+        <li>1/3 cup icing sugar, beaten into cream</li>
+        <li>2 tbsp icing sugar for dusting</li>
     </ul>
     <h2>Steps</h2>
     <ol>
