Add Steps to file
Added steps on how to make semla

--- a/recipes/semla.html
+++ b/recipes/semla.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Semla</title>
+    <title>Semla Buns</title>
 </head>
 <body>
-    <h1>Semla</h1>
+    <h1>Semla Buns</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2023%2F02%2F13%2F8540775-Semla-Swedish-Fat-Tuesday-Buns-2000.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Semla Buns" height="310" width="420">
     
     <h2>Description</h2>
     <p>I have always had a fascination with Sweden. Perhaps it is due to my deep interest in Vikings and their culture? Or it could be the fact that according to my MyHeritage.com DNA results I am apparently <strong>25.9%</strong> Scandinavian?</p>
     <p>Regardless of this, what inspired me to first attempt to make these delicious buns was after watch my partner and I's favourite anime, One Piece, and seeing Big Mom's obesession with them</p>
-    <p>They are traditionally supposed to be eating during February before Lent and apparently a Swedish <em>actually died from eating too many of them in one sitting (apparently 12!)</em></p>
+    <p>They are traditionally supposed to be eating during February before Lent and apparently a Swedish King <em>actually died from eating 12 of them in one sitting!</em></p>
 
     <h2>Ingredients</h2>
     <h3>Makes 12 Buns</h3>
@@ -46,7 +46,22 @@
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
+        <li>Add all <strong>Dough</strong> ingredients into a bowl and knead either in stand mixer with dough hook or by hand for 5-6 minutes, until soft, smooth, elastic dough forms.</li>
+        <li>Transfer dough to lightly floured surface and shape into a ball. Divide into 12 even portions, shaping into smaller balls by rolling under cupped hand.
+            <ul>
+                <li><strong>Tip: </strong>To accurately divide the dough, use a kitchen scale to weigh the dough and divide by 12.</li>
+            </ul>
+            <li>Place the dough balls onto a baking paper lined baking sheet or tray, leaving space in between each and push down slightly. Dust the tops with flour, cover with a clean kitchen towel and leave in a warm place to double in size, around 2 hours.</li>
+            <ul>
+                <li><strong>Tip: </strong>If making during winter with no warm place, trying putting the tray in the oven (while turned off), place another tray or pot underneath and add boiling water to it, shutting the oven quickly to trap in steam.</li>
+            </ul>
+        </li>
+        <li>Once risen, preheat the oven to 220 degrees C</li>
+        <li>Stir together the <strong>Egg Wash</strong> ingredients in a small bowl and brush buns all over with egg wash.</li>
+        <li>Bake in the preheated oven until lightly golden, around 12 minutes. Transfer buns onto a wire rack and let cool completely.</li>
+        <li>Combine <strong>Almond Filling</strong> in a food processor and blend until smooth.</li>
+        <li>Cut a triangle from the top of the buns and remove some of the crumbs to make room for the almond filling.</li>
+        <li>Pipe almond filling into each bun and top with whipped cream. Place the trianlge on top and dust with icing sugar before serving.</li>
     </ol>
 </body>
 </html>
