Fix a typo in the Ingredients

--- a/recipes/semla.html
+++ b/recipes/semla.html
@@ -23,7 +23,7 @@
         <li>7 tbsp unsalted butter, at room temperature</li>
         <li>2/3 cup icing sugar</li>
         <li>1 large egg</li>
-        <li>2 1/2 tsp groung cardamom</li>
+        <li>2 1/2 tsp ground cardamom</li>
         <li>1 tsp salt</li>
     </ul>
     <h4>Egg Wash</h4>
