--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Miso Soup</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Miso Soup</h1>
