--- a/recipes/semla.html
+++ b/recipes/semla.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Semla Buns</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Semla Buns</h1>
