Complete CSS styling

--- a/recipes/semla.html
+++ b/recipes/semla.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Semla Buns</title>
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css"> 
 </head>
 <body>
     <h1>Semla Buns</h1>
@@ -52,7 +52,8 @@
             <ul>
                 <li><strong>Tip: </strong>To accurately divide the dough, use a kitchen scale to weigh the dough and divide by 12.</li>
             </ul>
-            <li>Place the dough balls onto a baking paper lined baking sheet or tray, leaving space in between each and push down slightly. Dust the tops with flour, cover with a clean kitchen towel and leave in a warm place to double in size, around 2 hours.</li>
+        </li>
+        <li>Place the dough balls onto a baking paper lined baking sheet or tray, leaving space in between each and push down slightly. Dust the tops with flour, cover with a clean kitchen towel and leave in a warm place to double in size, around 2 hours.
             <ul>
                 <li><strong>Tip: </strong>If making during winter with no warm place, trying putting the tray in the oven (while turned off), place another tray or pot underneath and add boiling water to it, shutting the oven quickly to trap in steam.</li>
             </ul>
